fix spacing article-series and pub lrg and med

--- a/cigionline/static/css/cards/_card_large.scss
+++ b/cigionline/static/css/cards/_card_large.scss
@@ -125,20 +125,23 @@
     }
 
     .card__label {
+      @include media-breakpoint-up(md) {
+        padding: 0 1.5em 1em;
+      }
       margin: 0;
-      padding: 0 1.5em 1em;
+      padding: 0 0 1em;
     }
 
     .card__content {
       .card__image {
         @include media-breakpoint-up(md) {
-          padding: 3em 4em;
+          padding: 0 4em;
         }
         @include media-breakpoint-up(lg) {
-          padding: 3em 6em;
+          padding: 0 6em;
         }
         @include media-breakpoint-up(xl) {
-          padding: 3em 8em;
+          padding: 0 8em;
         }
         padding: 0 3em;
       }
